# lua-language-server-rust

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  main.lua
.github/workflows/: build.yml
3rd/LuaJIT-utf8/: utf8.c
3rd/lua-seri/: lua-seri.c  luajit-patch.c  luajit-patch.h
3rd/setfilemode/: setfilemode.c
crates/basic/: Cargo.toml  build.rs
crates/basic/src/: lib.rs
crates/basic/src/bee/: lua_filesystem.rs  lua_socket.rs  lua_subprocess.rs  lua_thread.rs  lua_time.rs  mod.rs
crates/basic/src/bee/socket/: lua_socket.rs  lua_socket_pool.rs  mod.rs
crates/basic/src/codestyle/: mod.rs
crates/basic/src/lpeglabel/: mod.rs
crates/basic/src/lua_seri/: mod.rs
crates/basic/src/luajit_utf8/: mod.rs
crates/basic/src/override_lua/: encoder.rs  mod.rs
crates/basic/src/parser/: lua_node.rs  lua_parser.rs  lua_syntax_tree.rs  mod.rs
crates/basic/src/utf8/: mod.rs
crates/luals/: Cargo.toml
crates/luals/src/: main.rs
crates/luals_wasm/: Cargo.toml
meta/Lua 5.4 en-us utf8/: debug.lua  io.lua  math.lua  os.lua  utf8.lua
meta/Lua 5.4 en-us utf8/table/: new.lua
meta/LuaJIT zh-cn utf8/: basic.lua
publish/: UnixBuild.sh  UnixPublish.sh  WinBuild.ps1  WinPublish.ps1  workflow_copy_files.py
resources/: luajitCompact.lua  main.lua  test.lua  testmain.lua
resources/meta/Lua 5.4 en-us utf8/: basic.lua  bit32.lua  coroutine.lua  package.lua  string.lua  table.lua
resources/meta/Lua 5.4 zh-cn utf8/: basic.lua  table.lua
resources/meta/LuaJIT zh-cn utf8/: basic.lua  table.lua
resources/override_script/: SDBMHash.lua  await.lua  client.lua  files.lua  filewatch.lua  lazy-cacher.lua  string-merger.lua  utility.lua
resources/override_script/config/: template.lua
resources/override_script/core/: find-source.lua
resources/script/: files.lua  log.lua
script/: files.lua
src/: lua_preload.rs  main.rs
src/bee/: lua_filesystem.rs  lua_filewatch.rs  lua_platform.rs  lua_select.rs  lua_socket.rs  lua_subprocess.rs  lua_thread.rs  lua_time.rs  lua_windows.rs  mod.rs
src/bee/socket/: mod.rs  (+3 more)
src/codestyle/: mod.rs
src/lua_seri/: mod.rs
(+25 files in other folders)
