[package]
name = "luals-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.10.0-beta.1", features = [ "lua54", "vendored"] }
lazy_static = "1.4.0"

[build-dependencies]
cc = "1.0"
glob = "0.3.0"