[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.dependencies]
mlua = { version = "0.10.0-beta.2", features = [ "lua54", "vendored", "async"] }
lazy_static = "1.4.0"
encoding_rs = "0.8"
tokio = { version = "1.40.0", features = ["full"] }
notify = { version = "6.1.1", features = ["serde"] }
emmylua_parser = "0.5"
rowan = { version = "0.16" }