[package]
name = "luals"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
include = ["resources/**/*"]

[[bin]]
name = "lua-language-server"
path = "src/main.rs"

[dependencies]
mlua.workspace = true
tokio.workspace = true

luals-basic = { path = "../basic" , optional = true }

[features]
default = ["luals-basic""]
no_format = ["luals-basic/no_format"]
